build: updates compiler options